--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,53 @@
+seaborn
+pandas
+attrs==18.2.0
+autobahn==18.9.2
+Automat==0.7.0
+backcall==0.1.0
+certifi==2018.8.24
+chardet==3.0.4
+colorama==0.3.9
+constantly==15.1.0
+decorator==4.3.0
+Django==2.1.2
+docker-py==1.10.3
+docker-pycreds==0.2.1
+fastzbarlight==0.0.14
+future==0.16.0
+go-vncdriver==0.4.19
+gym==0.7.4
+hyperlink==18.0.0
+idna==2.7
+incremental==17.5.0
+ipython==7.0.1
+ipython-genutils==0.2.0
+jedi==0.13.1
 numpy==1.15.2
+parso==0.3.1
+pexpect==4.6.0
+pickleshare==0.7.5
+Pillow==5.3.0
+prompt-toolkit==2.0.5
+ptyprocess==0.6.0
+pydotplus==2.0.2
+pyglet==1.3.2
+Pygments==2.2.0
+PyHamcrest==1.9.0
+pyparsing==2.2.2
+pytz==2018.5
+PyYAML==3.13
+requests==2.10.0
+scikit-learn==0.20.0
+scipy==1.1.0
+simplegeneric==0.8.1
+six==1.11.0
 termcolor==1.1.0
+traitlets==4.3.2
+Twisted==18.7.0
+txaio==18.8.1
+ujson==1.35
+universe==0.21.3
+urllib3==1.23
+wcwidth==0.1.7
+websocket-client==0.53.0
+zope.interface==4.5.0
